# Adaptive

./: .cproject  .gitignore  .project  App_2CMakeLists_8txt.html  App_2EM__test__process_2CMakeLists_8txt.html  App_2OTA_2CMakeLists_8txt.html  App_2SD_2CMakeLists_8txt.html  App_2SM_2CMakeLists_8txt.html  App_2UCM_2CMakeLists_8txt.html  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  Cloud_2metadata_8h.html  Cloud_2metadata_8h__dep__incl.map  Cloud_2metadata_8h__dep__incl.md5  Cloud_2metadata_8h__incl.map  Cloud_2metadata_8h__incl.md5  Cloud_2metadata_8h_source.html  ConcreteCryptoProvider_8cpp.html  ConcreteCryptoProvider_8cpp__incl.map  ConcreteCryptoProvider_8cpp__incl.md5  ConcreteCryptoProvider_8cpp_source.html  ConcreteIOInterface_8cpp.html  ConcreteIOInterface_8cpp__incl.map  ConcreteIOInterface_8cpp__incl.md5  ConcreteIOInterface_8cpp_source.html  ConcreteVolatileContainer_8cpp.html  ConcreteVolatileContainer_8cpp__incl.map  ConcreteVolatileContainer_8cpp__incl.md5  ConcreteVolatileContainer_8cpp_source.html  DartConfiguration.tcl  Doxyfile  EntryPoint.cpp  HKDF_8cpp.html  HKDF_8cpp__incl.map  HKDF_8cpp__incl.md5  HKDF_8cpp_source.html  HKDF_8h.html  HKDF_8h__dep__incl.map  HKDF_8h__dep__incl.md5  (+3827 more)
App/: CMakeLists.txt  exec_main.cpp
App/EM_test_process/: CMakeLists.txt  test_process.cpp
App/Manifests/: execution_manifest.json  machine_manifest.json
App/OTA/: CMakeLists.txt  ota_main.cpp
App/SD/: CMakeLists.txt  service_descovery.cpp
App/SM/: CMakeLists.txt  sm_main.cpp
App/UCM/: CMakeLists.txt  config.txt  sw_packages.json  ucm_server.cpp
Testing/: CMakeLists.txt  test_first.cpp
Testing/EM/: functiongroup_test.cpp  functiongroupstate_test.cpp  stateclient.cpp
cmake/: CMakeLists.txt
src/: CMakeLists.txt  exec_main.cpp  main  main.cpp  main2  proxy.cpp  proxy.h  server_someip.cpp  test_process.cpp
src/OTA/: client.cpp  jsoncpp.cpp  meta_data_storage.cpp  meta_data_storage.h  metadata.cpp  metadata.h  updateversion.cpp
src/SD_c/: common.h  proxy.h  return_types.h
src/SD_s/: skeleton.cpp  skeleton.h
src/application/: Controller.java  Main.java  Node.java  application.css
src/ara/Log_trace/: Log.cpp  Log.h
src/ara/OTA/: client.cpp  client.h  jsoncpp.cpp  meta_data_storage.cpp  metadata.cpp  metadata.h  updateversion.cpp
src/ara/SD_c/: common.h  proxy.cpp  proxy.h
src/ara/SD_s/: skeleton.cpp
src/ara/com/: deserializer.h  marshal.h  serializer.h
src/ara/com/SKELETON/: common.h  definitions.h  manifest.h  service_base.h
src/ara/com/SOMEIP/: Message.cpp  Message.h  SomeipSDMessage.cpp  SomeipSDMessage.h
src/ara/com/ServiceDiscovery/: client  client.cpp  csv.h  data.h  proxy.cpp  proxy.hpp  sender.cpp  server  server.cpp  service_descovery  service_descovery.cpp  servicediscovery  skeleton.cpp  skeleton.h
src/ara/com/ipc/: ipc_errors.h
src/ara/com/proxy_skeleton/: data_type.h  definitions.h  manifest.h  service_base.h
src/ara/core/: CMakeLists.txt  StringView.cpp  abort.h  core_error_domain.h  error_code.cpp  error_code.h  error_domain.cpp  error_domain.h  exception.cpp  exception.h  future.h  future_error_domain.h  initialization.h  instance_specifier.h  result.h  span.h  utility.h
src/ara/crypto/: ConcreteIOInterface.cpp  ConcreteVolatileContainer.cpp
src/ara/crypto/common/: base_id_types.h  concrete_io_interface.h  concrete_volatile_container.h  crypto_object_uid.h  io_interface.h  mem_region.h  security_error_domain.h  volatile_trusted_container.h
src/ara/crypto/cryp/: ConcreteCryptoProvider.cpp  CryptoContext.cpp  HKDF.cpp  HKDF.h  HMAC.cpp  HMAC.h  HMAC_digest_service.cpp  HMAC_digest_service.h  Keywrapper.cpp  Keywrapper.h  PRNG.cpp  PRNG.h  auth_cipher_ctx.h  authentication.cpp  authentication.h  block_service.h  concrete_crypto_provider.h  crypto_context.h  crypto_provider.h  digest_service.h  extension_service.h  hash_function_ctx.h  hash_service.cpp  hash_service.h  key_derivation_function_ctx.h  message_authn_code_ctx.cpp  message_authn_code_ctx.h  random_generator_ctx.h  sha256.cpp  symmetric_block_cipher_ctx.h  symmetric_cipher.cpp  symmetric_cipher.h  symmetric_key_wrapper_ctx.h
src/ara/crypto/keys/: Inher_key_slote.h  KSP_key_storage_provider.cpp  KSP_key_storage_provider.h  elementary_types.h  key_slot_content_props.cpp  key_slot_content_props.h  key_slot_prototype_props.cpp  key_slot_prototype_props.h  key_storage_provider.h  keyslot.cpp  keyslot.h
src/ara/exec/: CMakeLists.txt  deterministic_client.cpp  deterministic_client.h  exec_error_domain.cpp  exec_error_domain.h  execution_client.cpp  execution_client.h  execution_error_event.h  function_group.cpp  function_group.h  function_group_state.cpp  function_group_state.h  state_client.cpp  state_client.h  worker_runnable.h  worker_thread.h
src/ara/exec/manifest_samples/: execution_manifest.json  machine_manifest.json
src/ara/exec/parser/: manifest_parser.cpp  manifest_parser.h  manifest_parser_struct.cpp  manifest_parser_struct.h  mnifest_parser_struct.cpp
src/ara/sample/: impl_adjustreturntype.h  sample_common.h  sample_skeleton.h  smaple_proxy.h
src/ara/sm/: CServer.h  Notifier.h  PowerMode.cpp  PowerMode.h  Trigger.h  TriggerIn.cpp  TriggerIn.h  TriggerInOut.cpp  TriggerInOut.h  TriggerOut.cpp  TriggerOut.h  diagnostic_reset.cpp  main.cpp  sm_error_domain.h  state_manager.cpp  state_manager.h  triggerin_proxy.h  triggerin_skeleton.h  triggerinout_skeleton.h  triggerout_proxy.h  triggerout_skeleton.h  update_request.cpp  update_request.h  updaterequest_proxy.h  updaterequest_skeleton.h
src/ara/sm/diagnostic_reset/: diagnostic_reset_common.h  diagnostic_reset_proxy.h  diagnostic_reset_return_types.h  diagnostic_reset_skeleton.h
src/ara/sm/powermode/: powermode_common.h  powermode_proxy.h  powermode_return_types.h  powermode_skeleton.h  powermode_types.h
src/ara/sm/triggerin/: triggerin_proxy.h  triggerin_skeleton.h  triggerin_types.h
src/ara/sm/triggerinout/: triggerinout_proxy.h  triggerinout_skeleton.h  triggerinout_types.h
src/ara/sm/triggerout/: triggerout_proxy.h  triggerout_types.h  (+1 more)
src/cryp/: ConcreteCryptoProvider.cpp  HMAC.cpp
(+803 files in other folders)
